metadata/force-app/main/default/objects/PDRI__Metadata_Deployment_Result__c/fields/TestsFailed__c.field-meta.xml
<CustomField>
    <fullName>TestsFailed__c</fullName>
    <label>TestsFailed</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>