metadata/force-app/main/default/objects/PDRI__Metadata_Deployment_Result__c/fields/TestsPassed__c.field-meta.xml
<CustomField>
    <fullName>TestsPassed__c</fullName>
    <label>TestsPassed</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>