metadata/force-app/main/default/objects/PDRI__Metadata_Deployment_Result__c/fields/TestsRan__c.field-meta.xml
<CustomField>
    <fullName>TestsRan__c</fullName>
    <label>TestsRan</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>